[package]
name = "yggdryl-dtype"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow data types for yggdryl — the DataType layer"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_dtype"
path = "src/lib.rs"

[dependencies]
# The io element codec `IoPrimitive` this layer's value codec delegates to.
yggdryl-buffer = { workspace = true }
# The `PrimitiveType` runtime tag this layer's canonical `PrimitiveType` trait bridges
# to (via `primitive_tag` / `from_primitive_tag`).
yggdryl-converter = { workspace = true }
# Apache Arrow's schema subset — `arrow_schema::DataType`, the canonical Arrow type
# descriptor every `DataType` here converts to and from. Not optional: Arrow is the
# data model, so the conversion is always available (never the `arrow` umbrella).
arrow-schema = { workspace = true }
