[package]
name = "yggdryl-field"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow-centric fields for yggdryl: the generic Field (a named, nullable, typed column with metadata) and its category marker traits"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_field"
path = "src/lib.rs"

[dependencies]
# The foundations (errors, the mapping codec, Jsonable) and the data-type
# descriptors a field carries.
yggdryl-core = { workspace = true, default-features = false }
yggdryl-dtype = { workspace = true, default-features = false }
# All heavy dependencies are optional and off by default (mirroring the core).
log = { version = "0.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
# Round-trip the `serde` impls through a concrete format in the tests.
serde_json = { version = "1" }

[features]
default = []
log = ["dep:log", "yggdryl-core/log", "yggdryl-dtype/log"]
serde = ["dep:serde", "yggdryl-core/serde", "yggdryl-dtype/serde"]
json = ["serde", "yggdryl-core/json", "yggdryl-dtype/json"]
