[package]
name = "yggdryl-field"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow-centralized field layer for yggdryl (named, nullable columns of a data type)"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_field"
path = "src/lib.rs"

[dependencies]
# The data-type layer: every field pairs a name with a `yggdryl-dtype` data type.
yggdryl-dtype = { workspace = true }
# Arrow interop surface: `Field::to_arrow` / `from_arrow` mirror an
# `arrow_schema::Field`.
arrow-schema = { workspace = true }
# `half::f16` is the native element of the `float16` field's data type.
half = { workspace = true }
# Optional structured logging via the `log` facade (the `log_event!` macro),
# mirroring yggdryl-core; off by default.
log = { version = "0.4", optional = true }

[features]
log = ["dep:log"]

[dev-dependencies]
# Benchmark harness for the Arrow-interop benches (stable Rust has no built-in
# bencher). Same version as the yggdryl-core benches.
criterion = "0.5"

[[bench]]
name = "field"
harness = false
