[package]
name = "yggdryl-field"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow fields for yggdryl — the Field layer"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_field"
path = "src/lib.rs"

[dependencies]
# One layer down: the data types this layer names and makes nullable. Dependencies
# point strictly downward (field → dtype → core).
yggdryl-dtype = { workspace = true }
# The primitive/IO foundations, reached through dtype's native types.
yggdryl-core = { workspace = true }
# The generic header map (`Headers` / `HeadersBased`) a field carries as metadata.
yggdryl-http = { workspace = true }
# Apache Arrow's schema subset — `arrow_schema::Field`, the canonical Arrow field
# descriptor every `Field` here converts to and from (never the `arrow` umbrella).
arrow-schema = { workspace = true }
