[package]
name = "yggdryl-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Blocking HTTP client (session/request/response, requests-like) that streams bodies over the yggdryl-core byte-IO abstraction"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_http"
path = "src/lib.rs"

[[bench]]
name = "http"
harness = false

[dependencies]
# The consolidated core: the byte-IO foundation (a response body is a
# `Box<dyn Io>` — a seekable `HttpStream` when streamed, a `BytesIO` when
# buffered), the shared `Url`/`Uri` types and, under feature flags, the media
# types and streamed compression. `json` lights up `Io::json()` on every handle.
yggdryl-core = { workspace = true, default-features = false, features = ["json"] }
# The blocking HTTP transport. `rustls` gives TLS; ureq's own gzip/brotli are
# left off so decompression goes through `yggdryl-core`'s compression codecs.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Optional and off by default:
#   compression  auto-decode a `Content-Encoding` body via yggdryl-core's codecs;
#   media        expose the response `mime_type()` via yggdryl-core's media types;
#   serde        `Serialize`/`Deserialize` for the data types (Method, HttpVersion,
#                headers, cookies, retry config) and, transitively, the core types;
#   log          structured logging via the `log` facade.
serde = { version = "1", optional = true, features = ["derive"] }
log = { version = "0.4", optional = true }
# The optional async transports for HTTP/2 (`http2`) and HTTP/3 (`http3`). They
# share a small multi-threaded tokio runtime and tokio-rustls for TLS+ALPN; `http2`
# adds hyper (h2 over TLS, or h2c for cleartext) and `http3` adds quinn + h3 (HTTP/3
# over QUIC). Compiled only when one of those features is on — the default build
# stays the lean blocking `ureq` HTTP/1.1 client.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "net", "io-util", "time"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
webpki-roots = { version = "1", optional = true }
http = { version = "1", optional = true }
hyper = { version = "1", default-features = false, features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
quinn = { version = "0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
h3 = { version = "0.0.8", default-features = false, optional = true }
h3-quinn = { version = "0.0.10", default-features = false, optional = true }
bytes = { version = "1", optional = true }

[features]
# `compression` (auto `Content-Encoding` decode) ships on by default so a plain
# `get()` transparently decompresses, like `requests`; opt out with
# `default-features = false`.
default = ["compression"]
# Enabling `compression` turns on the gzip/zstd/snappy backends too, so a
# `Content-Encoding` response actually decodes.
compression = [
    "yggdryl-core/gzip",
    "yggdryl-core/zstd",
    "yggdryl-core/snappy",
]
media = ["yggdryl-core/media"]
# `serde` also turns on the core's `serde` feature, so the embedded value types
# (`Url`, `Method` strings, …) serialise too. A live request/response body streams
# off a connection and is deliberately not serialisable.
serde = ["dep:serde", "yggdryl-core/serde"]
# Internal: the shared async runtime + TLS stack both wire transports build on.
# Not meant to be enabled directly — `http2` / `http3` pull it in.
_async = ["dep:tokio", "dep:tokio-rustls", "dep:webpki-roots", "dep:http"]
# `http2` wires the optional hyper/tokio async transport so an `HttpVersion::Http2`
# request (or `Auto` negotiating `h2` via TLS ALPN) actually speaks HTTP/2 — over
# TLS for `https`, or h2c (prior knowledge) for cleartext `http`. With it off,
# `HttpVersion::Http2` stays unavailable and pinning it errors (the lean default).
http2 = [
    "_async",
    "dep:hyper",
    # `server` is pulled in only so the hermetic h2c test can run a localhost
    # HTTP/2 server; the client library itself uses only hyper's client side.
    "hyper/server",
    "dep:hyper-util",
    "dep:http-body-util",
]
# `http3` wires the optional quinn + h3 transport so an `HttpVersion::Http3` request
# speaks HTTP/3 over QUIC (TLS ALPN `h3`). With it off, `HttpVersion::Http3` stays
# unavailable and pinning it errors.
http3 = ["_async", "dep:quinn", "dep:h3", "dep:h3-quinn", "dep:bytes"]
log = ["dep:log", "yggdryl-core/log"]

[dev-dependencies]
rcgen = "0.14.8"
# Round-trip the `serde` impls through a concrete format in the tests.
serde_json = { version = "1" }
