[package]
name = "yggdryl-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Blocking HTTP client (session/request/response, requests-like) that streams bodies over the yggdryl-core byte-IO abstraction"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_http"
path = "src/lib.rs"

[[bench]]
name = "http"
harness = false

[dependencies]
# The consolidated core: the byte-IO foundation (a response body is a
# `Box<dyn Io>` ﻗ a seekable `HttpStream` when streamed, a `BytesIO` when
# buffered), the shared `Url`/`Uri` types and, under feature flags, the media
# types and streamed compression. `json` lights up `Io::json()` on every handle.
yggdryl-core = { workspace = true, default-features = false, features = ["json"] }
# The blocking HTTP transport. `rustls` gives TLS; ureq's own gzip/brotli are
# left off so decompression goes through `yggdryl-core`'s compression codecs.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Optional and off by default:
#   compression  auto-decode a `Content-Encoding` body via yggdryl-core's codecs;
#   media        expose the response `mime_type()` via yggdryl-core's media types;
#   log          structured logging via the `log` facade.
log = { version = "0.4", optional = true }
# HTTP/2 transport (off by default, enabled with `http2` feature):
hyper = { version = "1", features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"], optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "webpki-tokio", "tls12", "ring"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"], optional = true }
http-body-util = { version = "0.1", optional = true }

[features]
# `compression` (auto `Content-Encoding` decode) ships on by default so a plain
# `get()` transparently decompresses, like `requests`; opt out with
# `default-features = false`.
default = ["compression"]
# Enabling `compression` turns on the gzip/zstd/snappy backends too, so a
# `Content-Encoding` response actually decodes.
compression = [
    "yggdryl-core/gzip",
    "yggdryl-core/zstd",
    "yggdryl-core/snappy",
]
media = ["yggdryl-core/media"]
log = ["dep:log", "yggdryl-core/log"]
# HTTP/2 (and HTTP/1.1 ALPN fallback) via hyper + hyper-rustls + tokio.
# Off by default; the default build is pure HTTP/1.1 via ureq with no new
# required dependencies.
http2 = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:hyper-rustls",
    "dep:tokio",
    "dep:http-body-util",
]
# HTTP/3 stub (implies http2; QUIC/UDP support planned via quinn).
http3 = ["http2"]
