[package]
name = "yggdryl-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dependency-free abstract IO contract (read/write bytes and stream values) for yggdryl"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_io"
path = "src/lib.rs"

[dependencies]
# Optional, off by default: structured logging via the `log` facade (see
# yggdryl-media). Enabling `log` traces read/write/stream calls; without it the
# crate stays dependency-free.
log = { version = "0.4", optional = true }

[features]
log = ["dep:log"]
