[package]
name = "yggdryl-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Abstract byte-IO contract (read/write/seek bytes, stats, transfer) for yggdryl, with in-memory and local-path backends"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_io"
path = "src/lib.rs"

[[bench]]
name = "io"
harness = false

[dependencies]
# yggdryl-url provides the `Url` type behind the universal `Io::url()` (every IO
# has an address), so it is a base dependency.
yggdryl-url = { workspace = true }
# The rest are optional and off by default:
#   log    structured logging via the `log` facade (see yggdryl-media);
#   mmap   memory-mapped, zero-copy local files in `LocalPath` (memmap2);
#   media  lazy `media_type()` discovery on an `Io`/`Path` (yggdryl-media).
log = { version = "0.4", optional = true }
memmap2 = { version = "0.9", optional = true }
yggdryl-media = { workspace = true, optional = true }
# `json` adds `Io::json()` — a zero-copy parse of the handle's bytes.
serde_json = { version = "1", optional = true }

[features]
log = ["dep:log"]
mmap = ["dep:memmap2"]
media = ["dep:yggdryl-media"]
json = ["dep:serde_json"]
