[package]
name = "yggdryl-media"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Media (MIME) type detection from extensions and magic bytes for yggdryl"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_media"
path = "src/lib.rs"

[dependencies]
yggdryl-core.workspace = true
