[package]
name = "yggdryl-saga"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "yggdryl-saga — a columnar, Arrow-convertible dataframe core: lazy, zero-copy, tuned for sorted timeseries at scale"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_saga"
path = "src/lib.rs"

[dependencies]
# Every heavy dependency is optional. `arrow` ships on by `default` because the
# crate is Arrow-native (the schema types convert to/from `arrow-schema` at zero
# cost); opt out with `default-features = false` for a dependency-free type system
# that still parses, renders and compares schemas.
#   arrow  zero-copy conversions to/from `arrow-schema`'s DataType / Field;
#   serde  `Serialize` / `Deserialize` for every schema type (structural, lossless);
#   log    structured logging via the `log` facade.
arrow-schema = { version = "59", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
log = { version = "0.4", optional = true }

[dev-dependencies]
# Round-trip the `serde` impls through a concrete format in the tests.
serde_json = "1"

[features]
# Arrow conversions are on by default; drop them for a pure-Rust, dependency-free
# build (`default-features = false`).
default = ["arrow"]
arrow = ["dep:arrow-schema"]
serde = ["dep:serde"]
log = ["dep:log"]
