[package]
name = "yggdryl-scalar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow scalars for yggdryl — the Scalar layer"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_scalar"
path = "src/lib.rs"

[dependencies]
# One layer down: the fields/data types a scalar's value belongs to. Dependencies
# point strictly downward (scalar → field → dtype → core).
yggdryl-field = { workspace = true }
yggdryl-dtype = { workspace = true }
# The primitive/IO foundations — a scalar's value↔bytes codec delegates to
# `IoPrimitive` through the dtype layer.
yggdryl-core = { workspace = true }
# Apache Arrow's schema subset — a scalar reports the `arrow_schema::DataType` of its
# value (mirroring the field layer). Never the `arrow` umbrella.
arrow-schema = { workspace = true }
