[package]
name = "yggdryl-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow-flavoured schema layer for yggdryl (DataType / Field)"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_schema"
path = "src/lib.rs"

[dependencies]
# The dependency-light core supplies the foundational value types the schema types
# build on (the custom 256-bit integers I256 / U256).
yggdryl-core = { workspace = true }
