[package]
name = "yggdryl-url"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "URI and URL value types for yggdryl, built on yggdryl-core"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_url"
path = "src/lib.rs"

[dependencies]
yggdryl-core.workspace = true
