[package]
name = "yggdryl-url"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "URI and URL value types for yggdryl, built on yggdryl-core"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_url"
path = "src/lib.rs"

[[bench]]
name = "parse"
harness = false

[dependencies]
yggdryl-core.workspace = true
yggdryl-media.workspace = true
# Optional, off by default: structured logging via the `log` facade (see
# yggdryl-media). Enabling `log` traces parse outcomes; without it the crate is
# dependency-free.
log = { version = "0.4", optional = true }

[features]
log = ["dep:log", "yggdryl-media/log"]
