[package]
name = "yggdryl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl"
path = "src/lib.rs"

[dependencies]
